# simple-pathtracer-rs

./: .gitignore  Cargo.toml  README.md  test.fbx
src/: application.rs  camera.rs  disney.rs  main.rs  material.rs  model.rs  random.rs  resource_manager.rs  scene.rs  shape.rs  sphere.rs  texture.rs  triangle.rs
