[package]
name = "rust_gl"
version = "0.1.0"
authors = ["Viktor Zoutman <viktor@vzout.com>"]
edition = "2018"
description = "A simple CPU raytracer"
homepage = "https://vzout.com"
keywords = ["raytracing", "multi-threading", "simd", "opengl"]
categories = ["graphics"]
license = "MIT"

[profile.release]
lto = true
panic = 'abort'
#debug = true

[dependencies]
glm = "0.2.3"
image = "0.23.0"
itertools = "0.8.2"

[dependencies.rayon]
version = "1.3.0"

[dependencies.assimp]
version = "0.3.1"

[dependencies.bvh]
version = "0.3.1"

[dependencies.rand]
version = "0.7.3"
features = ["small_rng"]

[dependencies.gl]
version = "0.14.0"

[dependencies.oidn]
git = "https://github.com/Twinklebear/oidn-rs"

[dependencies.sdl2]
git = "https://github.com/Rust-SDL2/rust-sdl2"
features = ["image", "unsafe_textures"]
